--- a/News.html
+++ b/News.html
@@ -42,6 +42,10 @@
             </nav>
         </header>
 
+        <main class="main container">
+
+        </main>
+
         <footer class="footer">
             <h6> Официальные страницы </h6>
     
