--- a/Music.html
+++ b/Music.html
@@ -32,6 +32,10 @@
                 border: 3px solid black;
                 margin: 5px;
             }
+            h3.albom {
+                font: caption;
+                font-size: 20px;
+            }
             
         </style>
     </head>
@@ -49,7 +53,7 @@
                                         <a class="nav-link" href="file:///G:/%D0%A1%D0%B2%D0%B5%D1%82%D0%B0%20%D0%90%D0%B1%D1%80%D0%BE%D1%81%D0%B8%D0%BC%D0%BE%D0%B2%D0%B0/%D0%BC%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82/Music.html"> Music </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="file:///G:/%D0%A1%D0%B2%D0%B5%D1%82%D0%B0%20%D0%90%D0%B1%D1%80%D0%BE%D1%81%D0%B8%D0%BC%D0%BE%D0%B2%D0%B0/%D0%BC%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82/News.html"> News </a>
+                                        <a class="nav-link" href="file:///G:/%D0%A1%D0%B2%D0%B5%D1%82%D0%B0%20%D0%90%D0%B1%D1%80%D0%BE%D1%81%D0%B8%D0%BC%D0%BE%D0%B2%D0%B0/%D0%BC%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82/Gallery.html"> Gallery </a>
                                     </li>
                                 </ul>
                             </div>
@@ -60,32 +64,38 @@
         <main class="main container">
             <div class="row">
                 <div class="col-sm-12 col-lg-4">
-                    <img class="albom" src="pic/oneX.jpg" width="150" height="150" align="left"> 
+                    <img class="albom" src="pic/oneX.jpg" width="150" height="150" align="left">
+                    <br> 
                     <h3><a href="#"> One-X </a></h3>
                 </div>
 
                 <div class="col-sm-12 col-lg-4">
-                    <img class="albom" src="pic/threedaysgrace.jpeg" width="150" height="150" align="left"> 
+                    <img class="albom" src="pic/threedaysgrace.jpeg" width="150" height="150" align="left">
+                    <br> 
                     <h3><a href="#"> Three Days Grace </a></h3>
                 </div>
 
                 <div class="col-sm-12 col-lg-4">
-                    <img class="albom" src="pic/lifestartsnow.jpeg" width="150" height="150" align="left"> 
+                    <img class="albom" src="pic/lifestartsnow.jpeg" width="150" height="150" align="left">
+                    <br>
                     <h3><a href="#"> Life Starts Now </a></h3>
                 </div>
                 
                 <div class="col-sm-12 col-lg-4">
-                    <img class="albom" src="pic/transitofvenus.jpeg" width="150" height="150" align="left"> 
+                    <img class="albom" src="pic/transitofvenus.jpeg" width="150" height="150" align="left">
+                    <br>
                     <h3><a href="#"> Transit Of Venus </a></h3>
                 </div>
 
                 <div class="col-sm-12 col-lg-4">
-                    <img class="albom" src="pic/human.jpeg" width="150" height="150" align="left"> 
+                    <img class="albom" src="pic/human.jpeg" width="150" height="150" align="left">
+                    <br> 
                     <h3><a href="#"> Human </a></h3>
                 </div>
 
                 <div class="col-sm-12 col-lg-4">
-                    <img class="albom" src="pic/outsider.jpg" width="150" height="150" align="left"> 
+                    <img class="albom" src="pic/outsider.jpg" width="150" height="150" align="left">
+                    <br> 
                     <h3><a href="#"> Outsider </a></h3>
                 </div>
 
