--- a/Three Days Grace.html
+++ b/Three Days Grace.html
@@ -48,6 +48,14 @@
                 font-size: 20px;
                 color: rgb(255, 255, 255);
             }
+            .band {
+
+                padding: 15px;
+                background-color: black;
+            }
+            span {
+                color: black;
+            }
    
         </style>
     </head>
@@ -90,7 +98,7 @@
                           <ol>
                               <li> <a href="#Biography"> Biography </a></li>
                               <br>
-                              <li> <a href="#"> Gallery </a></li>
+                              <li> <a href="#"> News </a></li>
                               <br>
                               <li> <a href="#"> Coming Concerts </a></li>
                           </ol> 
@@ -101,7 +109,18 @@
                         <h6 class="text" name="Biography" > Группа Groundswell была сформирована в 1992 году, в Норвуде, Онтарио, пятью школьниками: Адамом Гонтье, Брэдом Уолстом, Нилом Сандерсоном, Джо Грантом и Филом Кроуи. Под этим названием группа выпустила альбом Wave of Popular Feeling (1995). После этого, Фил и Джо перестали ходить на репетиции. В 1997 году, после двухлетнего перерыва в деятельности, группа была воссоздана под новым названием Three Days Grace, а в её составе осталось лишь трио — Гонтье, Сандерсон и Уолст. По словам Адама, название группы возникло из вопроса: «Если бы у вас было только три дня, что бы вы изменили?». Перебравшись в Торонто, музыканты при помощи своего прежнего менеджера познакомились с продюсером Гэвином Брауном, ранее работавшим с Billy Talent, The Tea Party и др. Группа представила ему весь материал, который был сочинен с момента формирования коллектива. Браун сразу заметил талант группы, назвав их «золотыми самородками». Таким образом, с поддержкой продюсера, Three Days Grace записала демо-альбом, который был отправлен лейблу EMI Music Publishing Canada. Группой была представлена песня «I Hate Everything About You», вызвавшая неподдельный интерес сразу у нескольких лейблов звукозаписи. Таким образом был подписан контракт с Jive Records.</h6>
                     </div>
                 </div>
-        </main>
+
+            </main>
+
+                <nav class="band">
+                    <span> Hello</span>
+                </nav>
+
+            <main class="main container">
+
+                
+            </main>
+
 
         <footer class="footer">
             <h6> Официальные страницы </h6>
