--- a/Music.html
+++ b/Music.html
@@ -47,12 +47,10 @@
                     <div class="menu_ul">
                         <div class="row">
                             <ul class="mr-auto">
-                                    <li class="row">
-                                        <a class="nav-link" href="file:///E:/%D0%A1%D0%B2%D0%B5%D1%82%D0%B0%20%D0%90%D0%B1%D1%80%D0%BE%D1%81%D0%B8%D0%BC%D0%BE%D0%B2%D0%B0/%D0%BC%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82/Three%20Days%20Grace.html"> Home </a>
-                                
-                                        <a class="nav-link" href="file:///G:/%D0%A1%D0%B2%D0%B5%D1%82%D0%B0%20%D0%90%D0%B1%D1%80%D0%BE%D1%81%D0%B8%D0%BC%D0%BE%D0%B2%D0%B0/%D0%BC%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82/Music.html"> Music </a>
-       
-                                        <a class="nav-link" href="file:///G:/%D0%A1%D0%B2%D0%B5%D1%82%D0%B0%20%D0%90%D0%B1%D1%80%D0%BE%D1%81%D0%B8%D0%BC%D0%BE%D0%B2%D0%B0/%D0%BC%D0%BE%D0%B9%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82/Gallery.html"> Gallery </a>
+                                <li class="row">
+                                    <a class="nav-link" href="threedaysgrace.html"> Home </a>
+                                    <a class="nav-link" href="music.html"> Music </a>
+                                    <a class="nav-link" href="gallery.html"> Gallery </a>
                                 </li>
                             </ul>
                         </div>
